# MCS_ERP_BACKEND

./: Dockerfile  Plantilla_Carga_Equipos.xlsx  Plantilla_Carga_Especificaciones.xlsx  README.md  cloudbuild.yaml  dockerignore  gcloudignore  package-lock.json  package.json  pyproject.toml  server.js
config/: db.js  env.js
controllers/: calculoHistorialController.js  costoPerfilController.js  currencyController.js  productController.js  productoController.js  userController.js
data/: productsCache.json
middleware/: authMiddleware.js  errorMiddleware.js
models/: CalculoHistorial.js  ContadorConfiguracion.js  Conversation.js  CostoPerfil.js  Producto.js  User.js
routes/: calculoHistorialRoutes.js  costoPerfilRoutes.js  currencyRoutes.js  langchainRoutes.js  productRoutes.js  productoRoutes.js
src/models/: CalculoHistorial.js  Product.ts
utils/: calculoCostoProducto.js  fetchProducts.js  mongoDataService.js
